<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

<TextView
    android:id="@+id/TextViewTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:text="@string/status"
    android:textSize="12pt" >
 
</TextView>

 <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="15dp"
     android:orientation="horizontal" >

<TextView
    android:id="@+id/TextViewTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:text="@string/place"
    android:textSize="14pt" >

</TextView>
     
<Spinner  android:id="@+id/SpinnerPlaces"
    android:layout_height="wrap_content"
    android:prompt="@string/places_list_heading"
    android:layout_width="fill_parent"
    android:entries="@array/PlacesList">
    
    
</Spinner>
	</LinearLayout>

	<EditText
	    android:id="@+id/EditTextCommentBody"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="15dp"
	    android:hint="@string/defaultComment"
	    android:inputType="textMultiLine"
	    android:lines="2" >
	    
	    </EditText>

	 <CheckBox
	     android:id="@+id/CheckBoxResponse"
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:layout_marginTop="15dp"
	     android:text="@string/postOnTimeline" >

</CheckBox>

<Button
    android:id="@+id/ButtonSendFeedback"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:onClick="statusUpdate"
    android:text="@string/postButton" >

</Button>
    </LinearLayout>
</ScrollView>